# ota-for-aws-iot-embedded-sdk

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  MISRA.md  README.md  lexicon.txt  manifest.yml  otaFilePaths.cmake  sbom.spdx
.github/: .cSpellWords.txt  .exclude-urls.txt  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
_data/: doc_config.json
main/: annotated.html  classes.html  dir_000002_000003.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  globals_j.html  globals_m.html  globals_n.html  globals_o.html  globals_p.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  globals_v.html  globals_vars.html  group__ota__callback__types.html  group__ota__constants.html  group__ota__constants.js  group__ota__enum__types.html  group__ota__enum__types.js  group__ota__struct__types.html  group__ota__struct__types.js  index.html  modules.html  (+68 more)
source/: aws_iot_ota_agent.c  aws_iot_ota_agent_internal.h  aws_iot_ota_cbor.c  aws_iot_ota_http.c  aws_iot_ota_interface.c  aws_iot_ota_interface.h  aws_iot_ota_mqtt.c  aws_ota_base64.c  doxyoutput.txt  ota.c  ota_base64.c  ota_cbor.c  ota_http.c  ota_interface.c  ota_mqtt.c
test/: CMakeLists.txt
tools/: lexicon.txt
v2.0.0/: annotated.html  classes.html  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  files.html  (+128 more)
(+4383 files in other folders)
